--- a/portfolio.html
+++ b/portfolio.html
@@ -23,20 +23,20 @@
     <div class="showcase">
         <div class="container">
                 <h1>Portfolio</h1>
-                <div class="img-box"> <img src="assets/img/200px.jpg" alt="Word Guess">
-                    <h3>Word Guess</h3>
+                <div class="img-box"> <a href="https://dvshannon.github.io/psychic-game/"> <img src="assets/img/Screenshot 2019-02-25 22.48.04.png" alt="Word Guess">
+                    <p>Word Guess</p> </a>
                 </div>
                 <div class="img-box"> <img src="assets/img/200px.jpg" alt="RPG Game">
-                    <h3>RPG Game</h3>
+                    <p>RPG Game</p>
                 </div>
                 <div class="img-box"> <img src="assets/img/200px.jpg" alt="Trivia Game">
-                    <h3>Trivia Game</h3>
+                    <p>Trivia Game</p>
                 </div>
                 <div class="img-box"> <img src="assets/img/200px.jpg" alt="Rutgers Info Widget">
-                    <h3>Rutgers Info Widget</h3>
+                    <p>Rutgers Info Widget</p>
                 </div>
                 <div class="img-box"> <img src="assets/img/200px.jpg" alt="Rock Paper Scizzors">
-                    <h3>Rock Paper Scizzors</h3>
+                    <p>Rock Paper Scizzors</p>
                 </div>
         </div>
     </div>
