fixed sizing on crystal game image

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
         <div class="container">
                 <h1>Portfolio</h1>
                 <div class="img-box"> <a href="https://dvshannon.github.io/psychic-game/"> <img src="assets/img/Screenshot 2019-02-25 22.48.04.png" alt="Word Guess">
-                    <p>Word Guess</p> </a>
+                    <p>Psychic Game</p> </a>
                 </div>
-                <div class="img-box"> <img src="assets/img/200px.jpg" alt="RPG Game">
-                    <p>RPG Game</p>
+                <div class="img-box"> <a href="https://dvshannon.github.io/unit-4-game/"><img src="assets/img/Screenshot 2019-03-05 17.37.32.png" alt="RPG Game">
+                    <p>Crystal Game</p> </a>
                 </div>
                 <div class="img-box"> <img src="assets/img/200px.jpg" alt="Trivia Game">
                     <p>Trivia Game</p>
