added trivia game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                 <div class="img-box"> <a href="https://dvshannon.github.io/unit-4-game/"><img src="assets/img/Screenshot 2019-03-05 17.37.32.png" alt="RPG Game">
                     <p>Crystal Game</p> </a>
                 </div>
-                <div class="img-box"> <img src="assets/img/200px.jpg" alt="Trivia Game">
+                <div class="img-box"> <img src="assets/img/trivia-game.png" alt="Trivia Game">
                     <p>Trivia Game</p>
                 </div>
                 <div class="img-box"> <img src="assets/img/200px.jpg" alt="Rutgers Info Widget">
