added train scheduler

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,20 +23,32 @@
     <div class="showcase">
         <div class="container">
                 <h1>Portfolio</h1>
-                <div class="img-box"> <a href="https://dvshannon.github.io/psychic-game/"> <img src="assets/img/Screenshot 2019-02-25 22.48.04.png" alt="Word Guess">
-                    <p>Psychic Game</p> </a>
+                <div class="img-box"> 
+                    <a href="https://dvshannon.github.io/psychic-game/"> 
+                        <img src="assets/img/Screenshot 2019-02-25 22.48.04.png" alt="Word Guess">
+                        <p>Psychic Game</p> 
+                    </a>
                 </div>
-                <div class="img-box"> <a href="https://dvshannon.github.io/unit-4-game/"><img src="assets/img/Screenshot 2019-03-05 17.37.32.png" alt="RPG Game">
-                    <p>Crystal Game</p> </a>
+                <div class="img-box"> 
+                    <a href="https://dvshannon.github.io/unit-4-game/">
+                        <img src="assets/img/Screenshot 2019-03-05 17.37.32.png" alt="RPG Game">
+                        <p>Crystal Game</p> 
+                    </a>
                 </div>
-                <div class="img-box"> <a href="https://dvshannon.github.io/TriviaGame/"> <img src="assets/img/trivia-game.png" alt="Trivia Game">
-                    <p>Trivia Game</p></a>
+                <div class="img-box"> 
+                    <a href="https://dvshannon.github.io/TriviaGame/"> 
+                        <img src="assets/img/trivia-game.png" alt="Trivia Game">
+                        <p>Trivia Game</p>
+                    </a>
                 </div>
                 <div class="img-box"> <img src="assets/img/200px.jpg" alt="Rutgers Info Widget">
                     <p>Rutgers Info Widget</p>
                 </div>
-                <div class="img-box"> <img src="assets/img/200px.jpg" alt="Rock Paper Scizzors">
-                    <p>Rock Paper Scizzors</p>
+                <div class="img-box"> 
+                    <a href="https://dvshannon.github.io/train-schedule-app/">
+                        <img src="assets/img/200px.jpg" alt="Rock Paper Scizzors">
+                        <p>Train Scheduler</p>
+                    </a>
                 </div>
         </div>
     </div>
