added img for train project

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="img-box"> 
                     <a href="https://dvshannon.github.io/train-schedule-app/">
-                        <img src="assets/img/200px.jpg" alt="Rock Paper Scizzors">
+                        <img src="assets/img/train-scheduler.png" alt="Rock Paper Scizzors">
                         <p>Train Scheduler</p>
                     </a>
                 </div>
